scripts/k8s/label/2contains_all_v1/4_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  annotations:
    good1: value1
  labels:
    run: nginx
    bad1: value1
    bad2: value2
  name: nginx
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
