scripts/k8s/label/2contains_all_v1/1_policy1.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "demo-contains-all-v1"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
  - name: blacklist
    expression: '{"bad1": "value1*", "bad2": "value2*"}'
  - name: dataset1a
    expression: 'has(object.metadata.labels) ? object.metadata.labels : []'
  - name: dataset1b
    expression: 'has(object.spec.template.metadata.labels) ? object.spec.template.metadata.labels : []'
  - name: dataset3
    expression: 'has(object.spec.jobTemplate.metadata.labels) ? object.spec.jobTemplate.metadata.labels: []'
  - name: isType1
    expression: 'object.kind in ["Pod"] ? true: false'
  - name: isType2
    expression: 'object.kind in ["Deployment","ReplicaSet","DaemonSet","StatefulSet","Job"] ? true: false'
  - name: isType3
    expression: 'object.kind in ["CronJob"] ? true: false'
  validations:
    - expression: '
        !variables.isType1 ||
        (
          !variables.blacklist.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.blacklist[key]))
        )
        '
      message: '❌ operator: pod contains_all, labels cannot use all blacklist key/value'
    - expression: '
        !variables.isType2 ||
        (
          (!variables.blacklist.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.blacklist[key])))
          &&
          (!variables.blacklist.all(key, key in variables.dataset1b && variables.dataset1b[key].matches(variables.blacklist[key])))
        )
        '
      message: '❌ operator: deployment contains_all, labels cannot use all blacklist key/value'
    - expression: '
        !variables.isType3 ||
        (
          (!variables.blacklist.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.blacklist[key])))
          &&
          (!variables.blacklist.all(key, key in variables.dataset3 && variables.dataset3[key].matches(variables.blacklist[key])))
        )
        '
      message: '❌ operator: cronjob contains_all, labels cannot use all blacklist key/value'
